<resources>

    <string name="app_name">Work Hub</string>
	<string name="supprimer">Supprimer</string>
	<string name="ouvrir">Ouvrir</string>
	<string name="masquer">Masquer</string>
	<string name="envoyer_a">Envoyer à ...</string>
	<string name="nouveau">Nouvel élément</string>
	<string name="nouveau_raccourci">Nouveau raccourci</string>
	<string name="importer">Importer</string>
	<string name="exporter">Exporter</string>
	<string name="editer">Editer</string>
	<string name="clear_all">Tous masquer</string>
	<string name="degroupe">Dégrouper</string>
	<string name="element_texte">Texte</string>
	<string name="element_image">Image</string>
	<string name="element_lien">Lien</string>
	<string name="element_fichier">Fichier</string>
	<string name="select_color">Couleur:</string>
	<string name="ip_address">Adresse IP</string>
	<string name="pseudo">Votre pseudo</string>
	<string name="heberger">Héberger le Hub</string>
	<string name="connexion">Connexion au Hub</string>
	
	<string name="raccourci_envoyer">Envoyer</string>
	<string name="raccourci_editer">Editer</string>
	<string name="raccourci_exporter">Exporter</string>
	<string name="raccourci_recevoir">Recevoir</string>
	<string name="raccourci_masquer">Masquer</string>
	<string name="raccourci_supprimer">Supprimer</string>
	
</resources>