<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:gravity="center_horizontal" android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:background="@color/bleuFonce"
	android:orientation="vertical">

  <Button 
    android:id="@+id/bt_editer"
    android:text="@string/editer"
    style="@style/bt_list"
    android:visibility="gone"
    />

<Button 
    android:id="@+id/bt_envoyer_a"
    android:text="@string/envoyer_a"
    style="@style/bt_list"
    android:visibility="gone"
    />
<Button 
    android:id="@+id/bt_nouveau"
    android:text="@string/nouveau"
    style="@style/bt_list"
    android:visibility="gone"
    />
<Button 
    android:id="@+id/bt_importer"
    android:text="@string/importer"
    style="@style/bt_list"
    android:visibility="gone"
    />
<Button 
    android:id="@+id/bt_exporter"
    android:text="@string/exporter"
    style="@style/bt_list"
    android:visibility="gone"
    />
<Button 
    android:id="@+id/bt_masquer"
    android:text="@string/masquer"
    style="@style/bt_list"
    android:visibility="gone"
    />
<Button 
    android:id="@+id/bt_supprimer"
    android:text="@string/supprimer"
    style="@style/bt_list"
    android:visibility="gone"
    />


	
	

</LinearLayout>
